# mincha-hfa15-whatsapp-poll

./: README.md  pyproject.toml  requirements-dev.txt  requirements.txt  send_whatsapp.py  test_send_whatsapp.py  yamllint.yaml
.github/workflows/: _send-whatsapp.yaml  _send-whatsapp.yml  dependabot-auto-merge.yaml  gemini-cli.yml  gemini-issue-automated-triage.yml  gemini-issue-scheduled-triage.yml  lint-typecheck.yaml  pr-check-ruff-pyright-pytest.yaml  send-poll.yaml  send-poll.yml  send-reminder.yaml  send-reminder.yml  send-whatsapp.yml  super-linter.yaml  weekly-dep-upgrade.yaml
assets/: holidays_2025.json  holidays_2026.json  holidays_2027.json
