[project]
name = "mincha-hfa15-whatsapp-poll"
version = "1.0.0"
description = "Whatsapp poll and reminder message automation for Amazon HFA15 Mincha group"
readme = "README.md"
dependencies = ["python-dotenv>=1.2.1", "requests>=2.32.5"]
requires-python = ">=3.12"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["BLE001", "COM812", "D203", "D213"]

[tool.ruff.lint.extend-per-file-ignores]
"test_*.py" = ["S101"]

[tool.pyright]
typeCheckingMode = "strict"

[dependency-groups]
dev = [
    "pyright[nodejs]>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.14.11",
    "types-requests>=2.32.4.20260107",
]
